# aiosendspin

./: README.md  pyproject.toml
.github/workflows/: pr-labels.yaml  release-drafter.yml  release.yml  test.yml
aiosendspin/client/: client.py  time_sync.py
aiosendspin/models/: __init__.py  color.py  controller.py  core.py  player.py  types.py  visualizer_draft_r1.py
aiosendspin/server/: __init__.py  audio.py  audio_transformers.py  client.py  connection.py  group.py  push_stream.py  server.py
aiosendspin/server/roles/: __init__.py  base.py
aiosendspin/server/roles/artwork/: v1.py
aiosendspin/server/roles/color/: __init__.py  events.py  group.py  state.py  types.py  v1.py
aiosendspin/server/roles/controller/: __init__.py  events.py  group.py  v1.py
aiosendspin/server/roles/metadata/: group.py  state.py  v1.py
aiosendspin/server/roles/player/: __init__.py  audio_transformers.py  capabilities.py  events.py  group.py  v1.py
aiosendspin/server/roles/visualizer/: __init__.py  features.py  group.py  packing.py  types.py  v1.py
aiosendspin/server/roles/visualizer_draft_r1/: __init__.py  features.py  packing.py  role.py
scripts/: compare_time_filter.py  cpp_reference_sha.txt
tests/: test_client_protocol_callbacks.py  test_client_visualizer_parsing.py  test_time_sync.py
tests/integration/: sync_assertions.py  test_audible_sync_fuzz.py  test_late_joiner_codec.py  test_multi_player_timing_integration.py
tests/models/: test_client_hello_role_versions.py  test_color.py  test_controller.py  test_player.py  test_server_state_merge.py  test_stream_role_validators.py  test_stream_start_visualizer_union.py
tests/server/: test_audio_transformers.py  test_buffer_tracker.py  test_connection_writer.py  test_external_players.py  test_external_source.py  test_group_remove_client.py  test_multi_server.py  test_player_role_stream_messages.py  test_push_stream_behavior.py  test_sendspin_client_persistence.py  test_server_initial_connect.py  test_stream_request_format.py
tests/server/roles/: test_player_v1.py
tests/server/roles/artwork/: test_v1.py
tests/server/roles/color/: __init__.py  test_group.py  test_state.py  test_v1.py
tests/server/roles/controller/: test_group.py
tests/server/roles/metadata/: test_group.py  test_v1.py
tests/server/roles/player/: test_group.py
tests/server/roles/visualizer/: test_features.py  test_group.py  test_v1.py
tests/server/roles/visualizer_draft_r1/: __init__.py  conftest.py  test_compat.py  test_features.py  test_v1.py
